# hs-bot

./: .gitignore  README.md  daml.yaml  hs-bot.cabal
daml/: MasterCopy.daml
src/DA/Ledger/App/MasterCopy/: Bot.hs  Contracts.hs  CopyBot.hs  Domain.hs  Logging.hs  MCLedger.hs  Main.hs  RuleBot.hs
