cabal-version: 1.12

name:           hs-bot
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/bame-da/hs-bot#readme>
homepage:       https://github.com/bame-da/hs-bot#readme
bug-reports:    https://github.com/bame-da/hs-bot/issues
author:         Bernhard Elsner
maintainer:     bernhard.elsner@digitalasset.com
copyright:      2019 Digital Asset (Switzerland) GmbH
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/bame-da/hs-bot

library
  exposed-modules:
      DA.Ledger.App.MasterCopy.MCLedger
      DA.Ledger.App.MasterCopy.Contracts
      DA.Ledger.App.MasterCopy.Domain
      DA.Ledger.App.MasterCopy.Logging
      DA.Ledger.App.MasterCopy.Main
      DA.Ledger.App.MasterCopy.Bot
      DA.Ledger.App.MasterCopy.RuleBot
      DA.Ledger.App.MasterCopy.CopyBot
  other-modules:
      Paths_hs_bot
  hs-source-dirs:
      src
  build-depends:
      ansi-terminal
    , async
    , base
    , containers
    , daml-ledger
    , da-hs-base
    , daml-lf-ast
    , extra
    , haskeline
    , random
    , retry
    , text
    , time
    , transformers
    , uuid
  default-language: Haskell2010
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    OverloadedStrings

executable hs-bot-exe
  main-is: DA/Ledger/App/MasterCopy/Main.hs
  other-modules:
      Paths_hs_bot
      DA.Ledger.App.MasterCopy.MCLedger
      DA.Ledger.App.MasterCopy.Contracts
      DA.Ledger.App.MasterCopy.Domain
      DA.Ledger.App.MasterCopy.Logging
      DA.Ledger.App.MasterCopy.Bot
      DA.Ledger.App.MasterCopy.RuleBot
      DA.Ledger.App.MasterCopy.CopyBot
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is DA.Ledger.App.MasterCopy.Main
  build-depends:
      ansi-terminal
    , async
    , base
    , containers
    , daml-ledger
    , da-hs-base
    , daml-lf-ast
    , extra
    , haskeline
    , hs-bot
    , random
    , retry
    , text
    , time
    , transformers
    , uuid
  default-language: Haskell2010
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    OverloadedStrings